--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -29,8 +29,7 @@
   </aside>
   <% end %>
   <aside>
-    <ul>
-      <li><%= link_to "View Tools by Category", categories_path %></li>
+    <ul class="lst">
       <li><%= link_to "Add a New Tool", new_tool_path %></li>
     </ul>
   </aside>
