--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -1,27 +1,31 @@
-body { }
-.container { width:1000px; margin:0 auto; }
+$header-link: #68aff3;
+
+body { font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helvetica, Arial, sans-serif; color: #51463d; font-size: 62.5%; background:#222; }
+.container { max-width:1100px; margin:0 auto; position:relative; height:100%; }
 .group:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 ul { list-style:none; margin:0; padding:0; }
 
 /* header */
-header { background-color:#766557; }
-#title { margin: 0; width:220px; float:left; }
-#title a { color:#e3c887; display:block; width:100%; text-decoration:none; font-size:3.2em; text-shadow: 0px 2px 3px #555; }
-#title a em { font-style:normal; }
-#title a:hover em { color:#eee; }
-#title a em.tagline { color:#B2A18F; font-size:16px; float:left; }
+header { display:block; background-color:#222; border-top:6px solid #68aff3; height:100px; border-bottom:3px solid #68aff3; }
+#title p a { display:block; color:#eee; font-size:3em; padding-top:.4em; }
+#title p a:hover { color:#ccc; }
+#title p a span { color:#68aff3; font-size:100%; }
+#title p a:hover span { color:#4B81B4; }
+#title span { font-size:2em; color:#9c9c9c; }
 
 /* navigation */
-#nav { position:relative; max-width:780px; margin:0; font-size: 1.3em; float:right; }
-#nav ul { margin:0; float:left; }
-#nav ul li { float: left; width: 200px; margin:0; border-left:1px solid #87705d; }
-#nav ul li.last { margin-right:0; width:175px; border-right:1px solid #87705d; float:right; }
-#nav ul li a { display:block; float:left; width:100%; font-size:1.1em; line-height:1.3em; font-weight:bold; -webkit-transition: background-color .4s linear; text-decoration:none; }
-#nav ul li a:hover, nav ul li.selected a { background: rgba(0,0,0,.15); }
-#nav ul li a strong { display: block; padding:.8em 15px; color:#ddd; font-weight:normal; }
-#nav ul li a:hover strong { color:#fff; }
-#nav ul li a em { display: block; font-size: .9em; font-weight: normal; font-style: normal; text-transform: none; letter-spacing: 0; color: #b2a18f; }
+#nav { display:block; position:absolute; right:0; bottom:0; width:800px; }
+#nav ul { float:right; }
+#nav ul li { float:left; }
+#nav ul li a:link, nav ul li a:visited  { display:block; background-color:$header-link; color:#fff; }
+#nav ul li a { padding:.6em 1.4em; font-size:1.4em; margin-left:1em;	
+	border-top-left-radius: 6px; border-top-right-radius: 6px; -webkit-border-top-left-radius: 6px; -webkit-border-top-right-radius: 6px; -moz-border-radius-topleft: 6px; -moz-border-radius-topright: 6px; }
+#nav ul li a:hover { background-color:$header-link; }
 
+
+
+/* subnav */
+#subnav { display:none; }
 #subnav .container { position:relative; }
 #subnav { background-color:#F3F2E8; clear:both; height:30px; border-bottom:1px solid #e5e4d9; }
 #subnav p { float:left; width:480px; color:#B2A18F; font-size:14px; line-height:30px; margin:0;}
@@ -37,21 +41,52 @@ header { background-color:#766557; }
 
 
 /* Main */
-#main { color:#333; padding:20px 0; background:url(/images/background.png); border-top:1px solid #fff; }
-#content { width:640px; float:left; }
-.main a { text-decoration:none; }
-.main a:hover { text-decoration:underline; }
-sidebar { width:320px; float:right; margin-top:32px; }
-aside { background: #f1f1f1; border: 1px solid #e3e3e3; margin: 0 0 1.5em 0; padding: 1.5em 1.5em 1em 1.5em ;}
-aside h3 { margin: 0; padding: 0 0 4px 0; font-size: 1.1em; font-weight: bold; color: #a14141; border-bottom: 2px solid #ecebe1; }
-aside  ul.lst li a { display: block; padding: 7px; border-bottom: 1px solid #f3f2e8; overflow: hidden; }
+section, aside { display:block; }
+#main { background-color:#E3E3E3; color:#1B1B1B; padding:2em 0; }
+#content, #content_with_nav, sidebar aside { background-color:#fff; padding:.6em; border:1px solid #ccc; }
+
+/* main content */
+#content { width:800px; float:left; padding:1em; }
+#content_with_nav { width:670px; float:left; min-height:500px; margin-left:-1px; }
+#content_with_nav.no_sidebar { margin-left:4px; }
+.main section { padding:1em; }
+
+/* Right sidebar */
+sidebar { width:260px; float:right;}
+sidebar aside { margin-bottom:2em; padding: 15px; }
+sidebar aside h3 { margin: 0 0 6px 0; padding: 0 0 4px 0; font-size: 1.6em; font-weight: bold; color:#365B81; border-bottom: 2px solid #ecebe1; }
+sidebar aside p.more { margin-top:12px; text-align:center; }
+sidebar aside ul li { font-size:1.2em; }
+
+/* Sidebar - Right - List of text */
+ul.txt li { padding:7px; border-bottom: 1px solid #f3f2e8; overflow: hidden; }
+ul.txt li:hover { background: #EFF2F7; }
+
+/* Sidebar - Right - List of links*/
+ul.lst li a { display:block; padding:7px; border-bottom: 1px solid #f3f2e8; overflow: hidden; }
 ul.lst li.last a { border: none; }
-ul.lst a:hover { background: #f8f7f1; }
-ul.lst li em {float: right; margin: 0 0 0 5px; font-size: 1em; font-style: normal; font-weight: normal; color: #9c836e; }
-ul.lst li.even { background-color:#cef; }
-	
+ul.lst a:hover { background: #EFF2F7; }
+ul.lst li em { float: right; margin: 0 0 0 5px; font-size: 1em; font-style: normal; font-weight: normal; color: #9c836e; }
+
+/* Sidebar - Right - List with ratings*/
+ul.lst-rating li { margin: 0 0 2px 0; position: relative;	 }
+ul.lst-rating li a { position: relative; display: block; padding: 7px; z-index: 2; font-size:1.1em; }
+ul.lst-rating li em { float: right; margin: 0 0 0 5px; font-style: normal; font-weight: normal; color: #9c836e; }
+ul.lst-rating li span { position: absolute; top: 0; left: 0; display: block; height: 100%; line-height: 2.55em; text-indent: -9999px; background: #EBE6FF; } 
+ul.lst-rating li:hover span { background: #C6C8E8; }
 
 /* footer */
-footer { border-top:1px solid #ccc; color:#9C836E; }
-footer a, footer a:visited { color:#51463D; }
-footer ul li { float:left; padding:0 20px 0 0; }
+footer { display:block; min-height:140px; }
+footer .wrapper { }
+footer p { }
+
+footer section { float:left; }
+footer section p, footer section h3  { margin:1em; }
+footer section li { margin:.4em 1em; }
+footer section.sidebar_nav { }
+footer section.main-footer { width:700px; }
+footer section.sidebar { width:260px; float:right; }
+footer section h3 { color:#E2DDDC; font-size:10px; text-transform:uppercase; }
+footer section ul li, footer section ul { }
+
+
