--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -5,14 +5,24 @@ a.add { background:url(/images/icons/13-plus.png) no-repeat; padding-left:20px; 
 a.remove { background:url(/images/icons/14-minus.png) no-repeat 0 7px; padding-left:20px; }
 img.screenshot { border: 1px solid #777; float:left; }
 a.external { font-size:1em; }
+a:link, a:visited { color:#3792B3; font-weight:bold; outline-color:-moz-use-text-color; outline-style:none; outline-width:medium; text-decoration:none; }
+
+
+/* home */
+section.announcement { margin-bottom:1em; }
+section.announcement p { font-size:1.8em; color:#333; margin:.5em 1em; text-align:center; }
+section.announcement p.title  { font-size:2.4em; color:#666; margin:.5em 0; }
+section.announcement p a { font-weight:bold; font-style:normal; }
+section.announcement p a:hover { text-decoration:underline; }
+
 
 /* Tabs */
 /* Very cool tabs from  http://www.simplebits.com/bits/css_tabs.html */
 ul.tabs { height: 34px; padding: 0 20px; background: url(http://static.arcadefly.com/images/helpers/tab_bottom.gif) repeat-x bottom; clear: both; margin:0px 0 20px; }
 ul.tabs li { margin: 0; padding: 0; display: inline; list-style-type: none; }
 ul.tabs a:link, ul.tabs a:visited { float: left; font-weight: bold; padding: 7px 1.2em; margin-right: 8px; border: 1px solid #a3a09e; text-decoration: none; color: #666; height:18px; }
-ul.tabs a { background-color: #f3f3f3; }
-ul.tabs li.current a:link, ul.tabs li.current a:visited { border-bottom: 1px solid #ececec; background: #ececec; color: #000; }
+ul.tabs a { background-color: #f3f3f3; font-size:1.6em; }
+ul.tabs li.current a:link, ul.tabs li.current a:visited { border-bottom: 1px solid #fff; background: #fff; color: #000; }
 ul.tabs a:hover { background-color: #fff;	}
 ul.tabs a.arcades { background-color: #dde; }
 ul.tabs a.arcades:hover { background-color: #ccf; }
@@ -21,6 +31,9 @@ ul.tabs a.games:hover { background-color: #fcc; }
 ul.tabs a.users { background-color: #ded; }
 ul.tabs a.users:hover { background-color: #cec; }
 
+section.tab { clear:both; }
+
+
 /* Sorting options */
 #sorting { float:right; position:relative; width:250px; }
 #sorting p { float:right; width:100%; text-align:right; }
@@ -28,28 +41,63 @@ ul.tabs a.users:hover { background-color: #cec; }
 #sorting p a.active { background:url(/images/icons/14-minus.png) no-repeat right; }
 #sorting ul.options { background-color:#F1F1F1; padding:10px; float:right; z-index:1; clear:left; border: 3px solid #e3e3e3; clear:both; position:absolute; top:20px; border-radius:8px; -moz-border-radius: 8px; width:200px; right:0; }
 
+
 /* sites#index, tools#index */
-ul.categories, ul.sites, ul.tools, ul.usings { list-style:none; }
+ul.categories, ul.sites, ul.tools, ul.usings { list-style:none; margin:1em; }
 ul.tools li.tool { border-bottom:1px solid #c3c0bd; padding-top:1em; }
-.title_bar { border-bottom:1px solid #ccc; }
+.title_bar { font-size: 1.4em; padding: 1em 1em 0 1em; }
 .title_bar h2, .title_bar h3, .title_bar h4 { float:left; }
 
-/* tools#index */
-.tools { clear:both; margin-top:1em; }
 
 /* Lists of sites or tools */
+.ind { border-top:1px solid #ccc; padding:1em 0; }
+.ind:hover { background-color:#efefef; }
+div.ind:hover { background-color:#fff; }
+div.ind { border:none; margin-bottom:3em; }
 .ind a.screenshot { float:left; margin-right:10px; width:110px; height:100px; max-width:110px; max-height:100px; }
-.ind a.screenshot img {  max-width:110px; max-height:100px; }
+.ind a.screenshot img { max-height:95px; max-width:120px;}
 .ind .title { min-height:60px; }
-.ind .title h4 { display:inline; width:100%; }
-.ind .details { margin-left:130px; min-height:100px; }
+.ind .title h4 { display:inline; width:100%; font-size:1.6em; }
+.ind .details { margin-left:140px; min-height:88px; position:relative; }
+.ind ul.count, .ind > ul.sites  { float:right; list-style:none; margin:0; }
+.ind ul.count a, .ind > ul.sites a, .ind ul.categories a { display:block; padding:4px; }
+.ind ul.count a { background-color:red; color:white; }
+.ind ul.count a:hover { background-color:blue; }
+.ind ul.count li.sites a { background-color:red; }
+.ind ul.count li.links a { background-color:yellow; }
+.ind ul.count li.alexa { background-color:blue; color:white; }
+.ind ul.count li.pagerank { background-color:green; color:white; }
+.ind p { font-size:1.4em; }
 
-.tool ul.count, .tool > ul.sites, .tool ul.categories  { float:right; list-style:none; margin:0; }
-.tool ul.count a, .tool > ul.sites a, .tool ul.categories a { display:block; padding:4px; }
-.tool .title ul.count a { background-color:red; color:white; }
-.tool .title ul.count a:hover { background-color:blue; }
-.tool .title ul.count li.sites a { background-color:red; }
-.tool .title ul.count li.links a { background-color:green; }
+/* tools#show, sites#show */
+section.tool a.screenshot, section.tool a.screenshot img,
+section.site a.screenshot, section.site a.screenshot img { max-width:200px; max-height:147px; }
+section.tool .details, section.site .details { margin-left:220px; min-height:145px; }
+section.tool section.tab ul.sites, section.sites section.tab ul.tools { position:relative; }
+
+
+section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img,
+section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img { max-height:95px; max-width:120px; }
+section.tab ul.tools .details, section.tab ul.sites .details { margin-left:140px; min-height:88px; }
+
+/* sites on a tool list, tools on a site list*/
+.sites .tools li a, .tools .sites li a { display:block; padding:.3em; margin-right:.4em; font-size:1.2em;  }
+.sites .tools, .tools .sites { margin:.4em 0; }
+.sites .tools li, .tools .sites li { float:left; }
+
+.sites .tools li a { background-color:orange; color:#000; }
+.tools .sites li a { background-color:yellow; }
+
+/* List of categories for a tool */
+.tool .categories { position:absolute; bottom:0; right:0; margin:0; padding:0; }
+.tool .categories li { margin-left:10px; float:right; }
+.tool .categories li a { background-color:#ccc; }
+
+
+
+/* sites#index, tools#show */
+/*
+
 .tool .title p { max-width:435px; }
 .tool .content .sites { float:left; }
 .tool .content .sites li { float:left; margin-right:10px; }
@@ -57,19 +105,10 @@ ul.tools li.tool { border-bottom:1px solid #c3c0bd; padding-top:1em; }
 .tool .content .categories li { margin-left:10px; float:right; }
 .tool .categories li a { background-color:#ccc; }
 
-/* tools#show, sites#show */
-section.tool a.logo, section.tool a.logo img { max-width:200px; max-height:147px; }
-section.tool .details { margin-left:220px; min-height:200px; }
-section.tool .title p { max-width:680px; }
-section.tool ul.sites { margin-top:20px; }
 
-/* sites */
-.site .title { min-height:24px; font-weight:normal; }
 
-/* sites#index, tools#show */
 ul.sites li.site img.screenshot.small { width:100px; height:78px; }
 ul.sites li.site .site_info { margin-left: 120px; }
-ul.sites li.site .site_info h4 { font-size:1.2em; }
 ul.sites li.site .site_info p.description { line-height:1.1em; }
 ul.sites li.site ul.ranks { list-style:none; float:right; border:1px solid #ccc; width:200px; }
 ul.sites li.site ul.ranks li { float:left; clear:left; width:100%; text-align:center; }
@@ -88,6 +127,7 @@ ul.ranks li.pagerank.pagerank-7 span { width:140px; }
 ul.ranks li.pagerank.pagerank-8 span { width:160px; } 
 ul.ranks li.pagerank.pagerank-9 span { width:180px; } 
 ul.ranks li.pagerank.pagerank-10 span { width:200px; } 
+*/
 
 /* sites#show */
 section.site { }
@@ -101,6 +141,7 @@ form.formtastic fieldset ol li.autolabel, form.formtastic fieldset ol li.tokenin
 form.formtastic fieldset ol li.autolabel label { margin: .4em 0 0 0.6em; position: absolute; color:#666; font-weight:normal; }
 form.formtastic fieldset ol li.nolabel label { display:none; }
 form.formtastic fieldset ol li.tokeninput { margin-bottom:2em; }
+
 
 .using textarea { height:55px; width:97%; }
 .using .countdown { margin:0; height:30px; position:absolute; width:580px; }
