--- a/app/views/home/beta.html.erb
+++ b/app/views/home/beta.html.erb
@@ -1,11 +1,18 @@
 <section id="content" class="main">
-  <p>SitesUsing is a collaborative collection of what runs the web. You can see what technology a website is using, or what an individual site is using. You can add your own site or fill in the gaps for what tools other sites are using.</p>
+  <section class="announcement">
+    <p class="title">Discover what powers the sites you visit</p>
+    <p>We're an <em>open resource</em> for what runs the web.
+      You can <%= link_to "see what tools a site is using", sites_path %>. 
+      Fill in what tools other sites are using or <%= link_to "Add your own site", new_site_path %> or <%= link_to "tool", new_tool_path %>.</p>
+    <% cache("popular-sites", :exires => 15.minutes) do %>
+  </section>
   <ul class="sites">
-    <%= render Site.popular(5) %>
+    <%= render Site.popular(5).with_tools(1) %>
   </ul>
+  <% end %>
 </section>
 
 <sidebar>
-  <%= render :partial => "layouts/sidebar/top_tools" %>
-  <%= render :partial => "layouts/sidebar/recent_usings" %>
+  <% cache("top-tools", :expires => 15.minutes) do %><%= render :partial => "layouts/sidebar/top_tools" %><% end %>
+  <% cache("recent-usings", :expires => 15.minutes) do %><%= render :partial => "layouts/sidebar/recent_usings" %><% end %>
 </sidebar>
