--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -1,20 +1,27 @@
 <% cache(["partial", site], :expires_in => 15.minutes) do %>
-<li class="site group">
-  <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=site.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" class="screenshot small" />
-  <div class="site_info">
-    <h4 class="title"><%= link_to site.title, site_path(site) %></h4>
-    <p clas="description"><%= site.excerpt %></p>
-    <p class="site_tools">
+<li class="site group ind">
+  <%= link_to site, :class => "screenshot" do %>
+    <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=site.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" />
+  <% end %>
+  <div class="details">
+    <div class="title">
+      <h4><%= link_to site.title, site_path(site) %></h4>
+      <ul class="count">
+        <li class="sites"><%= link_to pluralize(site.tools_count, "tool"), site %></li>
+        <%= raw global_alexa_rank(site.alexa_global_rank) %>
+        <%= raw google_pagerank(site.google_pagerank) %>
+      </ul>
+      <p clas="description"><%= site.excerpt %></p>
+
       <% if site.tools_count > 0 %>
-        Built with <%= raw site_tools(site) %>
-      <% else %>
-        We don't know what tools this site uses. <%= link_to "Help us fill in the gaps.", edit_site_tools_path(site) %>
+        <ul class="tools">
+          <%= raw site_tools(site) %>
+          <% if site.tools_count > 2 %>
+            <li><%= link_to "#{pluralize(site.tools_count-2, 'more tool')}", site %></li>
+          <% end %>
+        </ul>
       <% end %>
-    </p>
-    <ul class="ranks">
-      <li>Alexa Rank: <%= site.alexa_global_rank %></li>
-      <li>Google Pagerank: <%= site.google_pagerank %></li>
-    </ul>
+    </div>
   </div>
 </li>
 <% end %>
