--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,44 +1,42 @@
 <% title "#{@site.title}" %>
 <section id="content" class="main site">
-  <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=@site.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" class="screenshot small" />
-  
-  <section class="site_details group">
-    <h2 class="title"><%= @title %></h2>
-    <%= raw show_breadcrumbs "#{link_to 'sites', sites_path} > #{@site.title}" %>
-    <p clas="external"><%= link_to @site.url, @site.url %></p>
-    <% if @site.excerpt %>
-      <p><%= @site.excerpt %></p>
-    <% elsif @site.tools_count > 0 %>
-      <p>We know of <%= pluralize(@site.tools_count, "tool") %> used on this site.</p>
-    <% end %>
-    <ul class="ranks">
-      <li><%= raw global_alexa_rank(@site.alexa_global_rank) %></li>
-      <li><%= raw google_pagerank(@site.google_pagerank) %></li>
-    </ul>
-  </section>
-
-  <% if !@site.description.blank? && (@site.description != @site.excerpt) %>
-    <section>
-      <h3>About <%= @site.title %></h3>
-      <p><%= @site.description %></p>
-    </section>
+  <% cache(["full", @site]) do %>
+    <%= render 'header' %>
   <% end %>
+  
+  <ul class="tabs">
+    <%= menu_link "Sites", site_path(@site), { :a_class => 'sites' } %>
+    <%= menu_link "Articles", "#", { :a_class => 'articles' } if @site.articles_count > 0 %>
+    <%= menu_link "Jobs", "#", { :a_class => 'jobs' } if @site.jobs_count > 0 %>
+  </ul>
 
-  <section>
-    <h3>Tools used on <%= @site.title %></h3>
+
+  <section class="tab">
     <% if @site.tools_count > 0 %>
-    <ul class="usings">
+    <div class="title_bar group">
+      <h3>We know of <strong><%= pluralize(@site.tools_count, "tool") %></strong> used on <strong><%= @site.title %></strong></h3>
+    </div>
+    <ul class="usings sites">
       <%= render :partial => 'usings/using_tool', :collection => @site.usings.by_sites_count %>
     </ul>
     <% else %>
-      <p>We don't know what tools this site uses. <%= link_to "Help us fill in the gaps.", edit_site_tools_path(@site) %></p>
+      <p>We don't know of any tools that <%= @site.title %> is using.</p>
     <% end %>
   </section>
 </section>
 
 <sidebar>
   <aside>
-    <ul>
+    <h3>Similar Sites</h3>
+    <ul class="lst">
+      <li><a href="#"><em>Javascript</em>Prototype</a></li>
+      <li><a href="#"><em>Javascript</em>MooTools</a></li>
+      <li><a href="#"><em>Javascript</em>YUI</a></li>
+    </ul>
+  </aside>
+  <aside class="admin">
+    <h3>Admin Options</h3>
+    <ul class="lst">
       <li><%= link_to "Edit this Site", edit_site_path(@site) %></li>
       <li><%= link_to "Remove this Site", site_path(@site, :method => :delete) %></li>
       <li><%= link_to "Manage Tools for this Site", edit_site_tools_path(@site) %></li>
