--- a/app/views/usings/_using_site.html.erb
+++ b/app/views/usings/_using_site.html.erb
@@ -1,16 +1,27 @@
-<% cache(["using-site", using_site]) do %>
-  <li class="site group ind">
-    <%= link_to site_path(using_site.site), :class => "screenshot" do %>
-      <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=using_site.site.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" class="screenshot small" />
-    <% end %>  
-    
+<% cache(["partial", using_site], :expires_in => 15.minutes) do %>
+<li class="site group ind">
+  <%= link_to using_site.site, :class => "screenshot" do %>
+    <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=using_site.site.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" />
+  <% end %>
+  <div class="details">
     <div class="title">
       <h4><%= link_to using_site.site.title, using_site.site %></h4>
-      <ul class="ranks">
+      <ul class="count">
+        <li class="sites"><%= link_to pluralize(using_site.site.tools_count, "tool"), using_site.site %></li>
         <%= raw global_alexa_rank(using_site.site.alexa_global_rank) %>
         <%= raw google_pagerank(using_site.site.google_pagerank) %>
       </ul>
-      <%= content_tag(:p, using_site.description) if using_site.description %>
+      <p clas="description"><%= using_site.description %></p>
+
+      <% if using_site.site.tools_count > 0 %>
+        <ul class="tools">
+          <%= raw site_tools(using_site.site) %>
+          <% if using_site.site.tools_count > 2 %>
+            <li><%= link_to "#{pluralize(using_site.site.tools_count-2, 'more tool')}", using_site.site %></li>
+          <% end %>
+        </ul>
+      <% end %>
     </div>
-  </li>
+  </div>
+</li>
 <% end %>
