--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,4 +1,4 @@
-<% title "New Site" %>
+<% title "A a New Site to SitesUsing" %>
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
@@ -8,5 +8,7 @@
 </section>
 
 <sidebar>
-  <aside>test</aside>
+  <aside>
+    <h3></h3>
+  </aside>
 </sidebar>
