--- a/app/views/tools/_header.html.erb
+++ b/app/views/tools/_header.html.erb
@@ -1,6 +1,6 @@
 <% cache(["header", @tool], :expires_in => 15.minutes) do %>
 <div class="tool group ind">
-  <%= link_to @tool, :class => "screenshot" do %>
+  <%= link_to @tool.url, :class => "screenshot", :target => "_blank" do %>
     <% if @tool.url? %>
     <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=@tool.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" />
     <% else %>
@@ -10,12 +10,13 @@
 
   <div class="details">
     <div class="title">
-      <h4><%= link_to @tool.name, @tool %></h4>
+      <h4><%= link_to @tool.name, @tool.url, :target => "_blank" %></h4>
       <ul class="count">
         <li class="sites"><%= link_to pluralize(@tool.sites_count, "site"), @tool %></li>
         <li class="links"><%= link_to pluralize(0, "article"), @tool %></li>
       </ul>
       <%= content_tag(:p, @tool.description) unless @tool.description.blank? %>
+      <%= content_tag(:p, link_to(@tool.url, @tool.url, :target => "_blank")) unless @tool.url.blank? %>
     </div>
   
     <div class="content">
