--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,9 +1,8 @@
 <%= semantic_form_for @site do |f| %>
   <%= f.inputs do %>
-    <%= f.input :title, :as => :string, :required => true %>
-    <%= f.input :url, :as => :string, :required => true %>
-    <%= f.input :excerpt, :as => :text, :required => true, :hint => "140 characters max", :input_html => { :rows => 3 } %>
-    <%= f.input :description, :as => :text, :required => false %>
+    <%= f.input :url, :as => :string, :required => true, :label => "Site URL", :hint => "Root site URL. Don't add multiple URLs within the same domain." %>
+    <%= f.input :title, :as => :string, :required => true, :label => "Site Title", :hint => "Short name for this site. Don't go SEO crazy on this one - it doesn't matter. ex: Yahoo, Twitter, Google." %>
+    <%= f.input :description, :as => :text, :required => false, :label => "About this Site" %>
   <% end %>
   <%= f.buttons do %>
     <%= f.commit_button :label => "Create New Site" %>
